# FastHydroMap

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  environment.dev.yml  environment.py311.yml  environment.yml  pyproject.toml  pytest.ini
.github/workflows/: pytest-cpu.yml
docs/: INSTALL.md  PYPI_RELEASE.md
examples/: proteinG_short.dcd
scripts/: build_release.sh  chimerax_fdewet_trajectory_example.py  install_torch.sh  install_torch_pyg.sh  smoke_test_install.sh  test_wheel_install.sh
src/FastHydroMap/: __init__.py  __main__.py  cli.py  install_torch.py  tensor_graph.py
src/FastHydroMap/featurize/: graph.py  sasa.py
src/FastHydroMap/io/: pdb.py  residue_qc.py
src/FastHydroMap/models/: mpnn.py
src/FastHydroMap/predictors/: fdewet.py
src/FastHydroMap/utils/: atom_names.py  constants.py
src/FastHydroMap/weights/: mpnn_direct_prod_k12_rbf3_r2to14_s4_h24_d2_head20.pt  mpnn_latest.pt  sasa_feature_stats.npz
tests/: conftest.py  test_atom_names.py  test_graph_builder.py  test_install_torch.py  test_mpnn_forward.py  test_predictor_regression.py  test_residue_qc.py  test_sasa.py
tests/data/: 1A1U_fdewet.csv  1A1U_features.csv
training/: 01_build_sasa.py  02_build_mpnn_graphs.py  03_train_mpnn_val.py  04_train_mpnn_prod.py  README.md  residue_keys.py  train_mpnn_common.py
training/data/: splits.yaml
