[build-system]
requires      = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "FastHydroMap"
version     = "0.1.0"
description = "Predict per-residue Fdewet using SASA + MPNN"
authors     = [{name="Samuel Lobo", email="samuels.lobo@gmail.com"}]
license     = {text = "MIT"}
readme      = "README.md"
requires-python = ">=3.10,<3.12"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

dependencies = [
  "numpy>=1.26,<2.0",
  "pandas>=2.2,<3.0",
  "mdtraj>=1.10,<2.0",
  "pdbfixer",
  "openmm>=8.2,<9",
  "biopython>=1.85",
  "tqdm",
  "scipy>=1.11",
  "scikit-learn",
  "pyyaml",
  "setuptools<81",
]

[project.optional-dependencies]
inference = ["torch>=2.2,<2.8"]
dev = ["pytest", "black", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
fasthydromap = "FastHydroMap.cli:main"
